re PR c/81364 (Bogus -Wmultistatement-macros warning)

PR c/81364
	* c-parser.c (c_parser_else_body): Don't warn about multistatement
	macro expansion if the body is in { }.
	(c_parser_while_statement): Likewise.
	(c_parser_for_statement): Likewise.

	* Wmultistatement-macros-12.c: New test.

From-SVN: r250498